--- a/meta_resultados.html
+++ b/meta_resultados.html
@@ -279,7 +279,7 @@
 <td style="padding: 12px; text-align: center;">2,16%</td>
 </tr>
 <tr style="border-bottom: 1px solid #e2e8f0;">
-<td style="padding: 12px; font-weight: 500;">Posts Velada</td>
+<td style="padding: 12px; font-weight: 500;">Posts - Testes</td>
 <td style="padding: 12px; text-align: center;">R$ 599,54</td>
 <td style="padding: 12px; text-align: center;">111.664</td>
 <td style="padding: 12px; text-align: center;">2.113</td>
@@ -288,7 +288,7 @@
 <td style="padding: 12px; text-align: center;">0,89%</td>
 </tr>
 <tr>
-<td style="padding: 12px; font-weight: 500;">Retargeting</td>
+<td style="padding: 12px; font-weight: 500;">Posts - Retargeting</td>
 <td style="padding: 12px; text-align: center;">R$ 247,85</td>
 <td style="padding: 12px; text-align: center;">38.225</td>
 <td style="padding: 12px; text-align: center;">1.209</td>
